<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/topGroup"
        android:checkableBehavior="single">

        <item
            android:id="@+id/drawer_home"
            android:checkable="true"
            android:checked="true"
            android:icon="@drawable/ic_home"
            android:title="@string/drawer_home" />

        <item
            android:id="@+id/drawer_recyclerview"
            android:checkable="false"
            android:icon="@drawable/ic_list"
            android:title="@string/drawer_recyclerview" />



    </group>

    <group
        android:id="@+id/bottomGroup"
        android:checkableBehavior="single">

        <item
            android:id="@+id/drawer_moreapps"
            android:checkable="false"
            android:icon="@drawable/ic_local_grocery_store_red_500_24dp"
            android:title="@string/drawer_moreapps" />

        <item
            android:id="@+id/drawer_settings"
            android:checkable="false"
            android:icon="@drawable/ic_settings"
            android:title="@string/settings" />

        <item
            android:id="@+id/drawer_about"
            android:checkable="false"
            android:icon="@drawable/ic_info"
            android:title="@string/drawer_about" />

    </group>

</menu>