<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="support.plus.reportit.MainActivity">

        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay">

            <android.support.v7.widget.Toolbar
                android:id="@+id/fragment_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_scrollFlags="scroll|enterAlways"
                app:popupTheme="@style/AppTheme.PopupOverlay">

            </android.support.v7.widget.Toolbar>

        </android.support.design.widget.AppBarLayout>

        <include layout="@layout/fragment_5days"/>

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/coordinatorlayoutFragment2">

            <com.github.clans.fab.FloatingActionMenu
                android:id="@+id/menuShareReport"
                android:layout_gravity="bottom|end"
                android:layout_margin="@dimen/fab_margin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                fab:menu_fab_label="@string/share_report"
                app:layout_behavior="support.plus.reportit.FloatingActionMenuBehavior"
                fab:menu_colorNormal="@color/md_red_500"
                fab:menu_colorPressed="@color/md_red_800"
                fab:menu_colorRipple="#99FFFFFF"
                fab:menu_icon="@drawable/ic_share_white_24dp"
                fab:menu_animationDelayPerItem="100"
                android:layout_marginBottom="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginEnd="16dp">

                <com.github.clans.fab.FloatingActionButton
                    android:id="@+id/export_rtf"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:fab_colorNormal="@color/md_red_500"
                    app:fab_label="@string/save_as_rtf"
                    android:src="@drawable/ic_insert_drive_file_white_24dp"
                    android:layout_marginBottom="8dp"
                    android:layout_marginRight="8dp"
                    app:fab_colorPressed="@color/md_red_800"
                    app:fab_size="mini"
                    />

                <com.github.clans.fab.FloatingActionButton
                    android:id="@+id/export_pdf"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:fab_colorNormal="@color/md_red_500"
                    app:fab_label="@string/save_as_pdf"
                    android:src="@drawable/ic_picture_as_pdf_white_24dp"
                    android:layout_marginBottom="8dp"
                    android:layout_marginRight="8dp"
                    app:fab_colorPressed="@color/md_red_800"
                    app:fab_size="mini"

                    />

                <com.github.clans.fab.FloatingActionButton
                    android:id="@+id/share_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:fab_colorNormal="@color/md_red_500"
                    app:fab_label="@string/share_email"
                    android:src="@drawable/ic_email_white_24dp"
                    android:layout_marginBottom="8dp"
                    android:layout_marginRight="8dp"
                    app:fab_colorPressed="@color/md_red_800"
                    app:fab_size="mini"
                    />

            </com.github.clans.fab.FloatingActionMenu>

            </android.support.design.widget.CoordinatorLayout>

        </android.support.design.widget.CoordinatorLayout>
